--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "body-parser": "^1.18",
     "bunyan": "^1.8.12",
     "chai-jest-snapshot": "^2.0.0",
+    "csv-parse": "^4.6.3",
     "express": "^4",
     "inspire-tree": "^5.0.1",
     "lodash": "^4.17.10",
@@ -102,6 +103,7 @@
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.4.2",
+    "react-dropzone": "^10.1.10",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0"
   },
@@ -111,12 +113,14 @@
     "@types/body-parser": "^1.17",
     "@types/bunyan": "^1.8",
     "@types/chai": "^4.1.7",
+    "@types/csv-parse": "^1.2.2",
     "@types/express": "^4",
     "@types/jsdom": "^12.2.0",
     "@types/mocha": "^5.2.5",
     "@types/puppeteer": "^1.10.0",
     "@types/react": "^16.4.14",
     "@types/react-dom": "16.0.7",
+    "@types/react-dropzone": "^5.1.0",
     "chai": "^4.2.0",
     "chromedriver": "^2.34.1",
     "electron": "^4.0.1",
